include/trax.h

/**
 * A trax image data structure. Use trax_image_* functions to access the data.
**/
typedef struct trax_image {
    short type;
    int width;
    int height;
    int format;
    char* data;
} trax_image;
/**
 * A placeholder for region structure. Use the trax_region_* functions to manipulate
 * the data.
**/
typedef void trax_region;
/**
 * A placeholder for properties structure. Use the trax_properties_* functions to manipulate
 * the data.
**/
typedef struct trax_properties trax_properties;
/**
 * A placeholder for object list structure. Use the trax_object_list_* functions to manipulate
 * the data.
**/
typedef struct trax_object_list {
    int size;
    trax_region** regions;
    trax_properties** properties; 
} trax_object_list;
typedef void(*trax_logger)(const char *string, int length, void *obj);
/**
 * Some basic configuration data used to set up the server.
**/
typedef struct trax_logging {
    int flags;
    trax_logger callback;
    void* data;
} trax_logging;
/**
 * Metadata used to specify tracker metadata and taxonomy.
**/
typedef struct trax_metadata {
    int format_region;
    int format_image;
    int channels; // Encodes the number of channels (RGB, RGB+D, RGB+IR)
    int flags;
    char* tracker_name;
    char* tracker_description;
    char* tracker_family;
    trax_properties* custom;
} trax_metadata;
/**
 * Core object of the protocol. Do not manipulate fields directly.
**/
typedef struct trax_handle {
    int flags;
    int version;
    void* stream;
    trax_logging logging;
    trax_metadata* metadata;
    char* error;
    int objects;
} trax_handle;
/**
 * Array for keeping images (RGB, Depth, IR)
**/
typedef struct trax_image_list {
    trax_image* images[TRAX_CHANNELS];
} trax_image_list;
/**
 * Sends a frame message.
**/
__TRAX_EXPORT int trax_client_frame(trax_handle* client, trax_image_list* images, trax_object_list* objects, trax_properties* properties);
/**
 * Setups the protocol for the server side and returns a handle object.
**/
__TRAX_EXPORT trax_handle* trax_server_setup_v(trax_metadata *metadata, const trax_logging log, int version);
/**
 * Setups the protocol for the server side and returns a handle object.
**/
__TRAX_EXPORT trax_handle* trax_server_setup_file_v(trax_metadata *metadata, int input, int output, const trax_logging log, int version);
/**
 * Waits for a valid protocol message from the client. This method can only be used in single-object tracking mode.
**/
__TRAX_EXPORT int trax_server_wait_sot(trax_handle* server, trax_image_list** images, trax_region** region, trax_properties* properties);
/**
 * Sends a status reply to the client. This method can only be used in single-object tracking mode.
**/
__TRAX_EXPORT int trax_server_reply_sot(trax_handle* server, trax_region* region, trax_properties* properties);
/**
 * Waits for a valid protocol message from the client. This method can only be used in multi-object tracking mode.
**/
__TRAX_EXPORT int trax_server_wait_mot(trax_handle* server, trax_image_list** images, trax_object_list** objects, trax_properties* properties);
/**
 * Sends a status reply to the client. This method can only be used in single-object tracking mode.
**/
__TRAX_EXPORT int trax_server_reply_mot(trax_handle* server, trax_object_list* objects);
/**
 * Used in client and server. Closes communication, sends quit message if needed.
**/
__TRAX_EXPORT int trax_terminate(trax_handle* handle, const char* reason);
/**
 * Retrieve last error message encountered by the server or client. Returns NULL if no error occured.
**/
__TRAX_EXPORT const char* trax_get_error(trax_handle* handle);
/**
 * Check if the handle is alive or not. The handle is not alive if it was not initalized correctly or 
 * it was terminated.
**/
__TRAX_EXPORT int trax_is_alive(trax_handle* handle);
/**
 * Used in client and server. Closes communication, sends quit message if needed.
 * Releases the handle structure.
**/
__TRAX_EXPORT int trax_cleanup(trax_handle** handle);
/**
 * Sets the parameter of the client or server instance.
**/
__TRAX_EXPORT int trax_set_parameter(trax_handle* handle, int id, int value);
/**
 * Gets the parameter of the client or server instance.
**/
__TRAX_EXPORT int trax_get_parameter(trax_handle* handle, int id, int* value);
/**
 * Releases image structure, frees allocated memory.
**/
__TRAX_EXPORT void trax_image_release(trax_image** image);
/**
 * Creates a file-system path image description.
**/
__TRAX_EXPORT trax_image* trax_image_create_path(const char* path);
/**
 * Creates a URL path image description.
**/
__TRAX_EXPORT trax_image* trax_image_create_url(const char* url);
/**
 * Creates a raw buffer image description.
**/
__TRAX_EXPORT trax_image* trax_image_create_memory(int width, int height, int format);
/**
 * Creates a file buffer image description.
**/
__TRAX_EXPORT trax_image* trax_image_create_buffer(int length, const char* data);
/**
 * Returns a type of the image handle.
**/
__TRAX_EXPORT int trax_image_get_type(const trax_image* image);
/**
 * Returns a file path from a file-system path image description. This function
 * returns a pointer to the internal data which should not be modified.
**/
__TRAX_EXPORT const char* trax_image_get_path(const trax_image* image);
/**
 * Returns a file path from a URL path image description. This function
 * returns a pointer to the internal data which should not be modified.
**/
__TRAX_EXPORT const char* trax_image_get_url(const trax_image* image);
/**
 * Returns the header data of a memory image.
**/
__TRAX_EXPORT void trax_image_get_memory_header(const trax_image* image, int* width, int* height, int* format);
/**
 * Returns a pointer for a writeable row in a data array of an image.
**/
__TRAX_EXPORT char* trax_image_write_memory_row(trax_image* image, int row);
/**
 * Returns a read-only pointer for a row in a data array of an image.
**/
__TRAX_EXPORT const char* trax_image_get_memory_row(const trax_image* image, int row);
/**
 * Returns a file buffer and its length. This function
 * returns a pointer to the internal data which should not be modified.
**/
__TRAX_EXPORT const char* trax_image_get_buffer(const trax_image* image, int* length, int* format);
/**
 * Releases region structure, frees allocated memory.
**/
__TRAX_EXPORT void trax_region_release(trax_region** region);
/**
 * Returns type identifier of the region object.
**/
__TRAX_EXPORT int trax_region_get_type(const trax_region* region);
/**
 * Creates a special region object. Only one paramter (region code) required.
**/
__TRAX_EXPORT trax_region* trax_region_create_special(int code);
/**
 * Sets the code of a special region.
**/
__TRAX_EXPORT void trax_region_set_special(trax_region* region, int code);
/**
 * Returns a code of a special region object.
**/
__TRAX_EXPORT int trax_region_get_special(const trax_region* region);
/**
 * Creates a rectangle region.
**/
__TRAX_EXPORT trax_region* trax_region_create_rectangle(float x, float y, float width, float height);
/**
 * Sets the coordinates for a rectangle region.
**/
__TRAX_EXPORT void trax_region_set_rectangle(trax_region* region, float x, float y, float width, float height);
/**
 * Retreives coordinate from a rectangle region object.
**/
__TRAX_EXPORT void trax_region_get_rectangle(const trax_region* region, float* x, float* y, float* width, float* height);
/**
 * Creates a polygon region object for a given amout of points. Note that the coordinates of the points
 * are arbitrary and have to be set after allocation.
**/
__TRAX_EXPORT trax_region* trax_region_create_polygon(int count);
/**
 * Sets coordinates of a given point in the polygon.
**/
__TRAX_EXPORT void trax_region_set_polygon_point(trax_region* region, int index, float x, float y);
/**
 * Retrieves the coordinates of a specific point in the polygon.
**/
__TRAX_EXPORT void trax_region_get_polygon_point(const trax_region* region, int index, float* x, float* y);
/**
 * Returns the number of points in the polygon.
**/
__TRAX_EXPORT int trax_region_get_polygon_count(const trax_region* region);