support/python/trax/_ctypes.py


# /home/lukacu/Checkouts/vot/trax/include/trax.h: 272
if _libs["trax"].has("trax_client_frame", "cdecl"):
    trax_client_frame = _libs["trax"].get("trax_client_frame", "cdecl")
    trax_client_frame.argtypes = [POINTER(trax_handle), POINTER(trax_image_list), POINTER(trax_object_list), POINTER(trax_properties)]
    trax_client_frame.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 277
if _libs["trax"].has("trax_server_setup_v", "cdecl"):
    trax_server_setup_v = _libs["trax"].get("trax_server_setup_v", "cdecl")
    trax_server_setup_v.argtypes = [POINTER(trax_metadata), trax_logging, c_int]
    trax_server_setup_v.restype = POINTER(trax_handle)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 282
if _libs["trax"].has("trax_server_setup_file_v", "cdecl"):
    trax_server_setup_file_v = _libs["trax"].get("trax_server_setup_file_v", "cdecl")
    trax_server_setup_file_v.argtypes = [POINTER(trax_metadata), c_int, c_int, trax_logging, c_int]
    trax_server_setup_file_v.restype = POINTER(trax_handle)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 287
if _libs["trax"].has("trax_server_wait_sot", "cdecl"):
    trax_server_wait_sot = _libs["trax"].get("trax_server_wait_sot", "cdecl")
    trax_server_wait_sot.argtypes = [POINTER(trax_handle), POINTER(POINTER(trax_image_list)), POINTER(ctypes.c_void_p), POINTER(trax_properties)]
    trax_server_wait_sot.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 292
if _libs["trax"].has("trax_server_reply_sot", "cdecl"):
    trax_server_reply_sot = _libs["trax"].get("trax_server_reply_sot", "cdecl")
    trax_server_reply_sot.argtypes = [POINTER(trax_handle), ctypes.c_void_p, POINTER(trax_properties)]
    trax_server_reply_sot.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 297
if _libs["trax"].has("trax_server_wait_mot", "cdecl"):
    trax_server_wait_mot = _libs["trax"].get("trax_server_wait_mot", "cdecl")
    trax_server_wait_mot.argtypes = [POINTER(trax_handle), POINTER(POINTER(trax_image_list)), POINTER(POINTER(trax_object_list)), POINTER(trax_properties)]
    trax_server_wait_mot.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 302
if _libs["trax"].has("trax_server_reply_mot", "cdecl"):
    trax_server_reply_mot = _libs["trax"].get("trax_server_reply_mot", "cdecl")
    trax_server_reply_mot.argtypes = [POINTER(trax_handle), POINTER(trax_object_list)]
    trax_server_reply_mot.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 307
if _libs["trax"].has("trax_terminate", "cdecl"):
    trax_terminate = _libs["trax"].get("trax_terminate", "cdecl")
    trax_terminate.argtypes = [POINTER(trax_handle), ctypes.c_char_p]
    trax_terminate.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 312
if _libs["trax"].has("trax_get_error", "cdecl"):
    trax_get_error = _libs["trax"].get("trax_get_error", "cdecl")
    trax_get_error.argtypes = [POINTER(trax_handle)]
    trax_get_error.restype = ctypes.c_char_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 318
if _libs["trax"].has("trax_is_alive", "cdecl"):
    trax_is_alive = _libs["trax"].get("trax_is_alive", "cdecl")
    trax_is_alive.argtypes = [POINTER(trax_handle)]
    trax_is_alive.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 324
if _libs["trax"].has("trax_cleanup", "cdecl"):
    trax_cleanup = _libs["trax"].get("trax_cleanup", "cdecl")
    trax_cleanup.argtypes = [POINTER(POINTER(trax_handle))]
    trax_cleanup.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 329
if _libs["trax"].has("trax_set_parameter", "cdecl"):
    trax_set_parameter = _libs["trax"].get("trax_set_parameter", "cdecl")
    trax_set_parameter.argtypes = [POINTER(trax_handle), c_int, c_int]
    trax_set_parameter.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 334
if _libs["trax"].has("trax_get_parameter", "cdecl"):
    trax_get_parameter = _libs["trax"].get("trax_get_parameter", "cdecl")
    trax_get_parameter.argtypes = [POINTER(trax_handle), c_int, POINTER(c_int)]
    trax_get_parameter.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 339
if _libs["trax"].has("trax_image_release", "cdecl"):
    trax_image_release = _libs["trax"].get("trax_image_release", "cdecl")
    trax_image_release.argtypes = [POINTER(POINTER(trax_image))]
    trax_image_release.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 344
if _libs["trax"].has("trax_image_create_path", "cdecl"):
    trax_image_create_path = _libs["trax"].get("trax_image_create_path", "cdecl")
    trax_image_create_path.argtypes = [ctypes.c_char_p]
    trax_image_create_path.restype = POINTER(trax_image)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 349
if _libs["trax"].has("trax_image_create_url", "cdecl"):
    trax_image_create_url = _libs["trax"].get("trax_image_create_url", "cdecl")
    trax_image_create_url.argtypes = [ctypes.c_char_p]
    trax_image_create_url.restype = POINTER(trax_image)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 354
if _libs["trax"].has("trax_image_create_memory", "cdecl"):
    trax_image_create_memory = _libs["trax"].get("trax_image_create_memory", "cdecl")
    trax_image_create_memory.argtypes = [c_int, c_int, c_int]
    trax_image_create_memory.restype = POINTER(trax_image)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 359
if _libs["trax"].has("trax_image_create_buffer", "cdecl"):
    trax_image_create_buffer = _libs["trax"].get("trax_image_create_buffer", "cdecl")
    trax_image_create_buffer.argtypes = [c_int, ctypes.c_char_p]
    trax_image_create_buffer.restype = POINTER(trax_image)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 364
if _libs["trax"].has("trax_image_get_type", "cdecl"):
    trax_image_get_type = _libs["trax"].get("trax_image_get_type", "cdecl")
    trax_image_get_type.argtypes = [POINTER(trax_image)]
    trax_image_get_type.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 370
if _libs["trax"].has("trax_image_get_path", "cdecl"):
    trax_image_get_path = _libs["trax"].get("trax_image_get_path", "cdecl")
    trax_image_get_path.argtypes = [POINTER(trax_image)]
    trax_image_get_path.restype = ctypes.c_char_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 376
if _libs["trax"].has("trax_image_get_url", "cdecl"):
    trax_image_get_url = _libs["trax"].get("trax_image_get_url", "cdecl")
    trax_image_get_url.argtypes = [POINTER(trax_image)]
    trax_image_get_url.restype = ctypes.c_char_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 381
if _libs["trax"].has("trax_image_get_memory_header", "cdecl"):
    trax_image_get_memory_header = _libs["trax"].get("trax_image_get_memory_header", "cdecl")
    trax_image_get_memory_header.argtypes = [POINTER(trax_image), POINTER(c_int), POINTER(c_int), POINTER(c_int)]
    trax_image_get_memory_header.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 386
if _libs["trax"].has("trax_image_write_memory_row", "cdecl"):
    trax_image_write_memory_row = _libs["trax"].get("trax_image_write_memory_row", "cdecl")
    trax_image_write_memory_row.argtypes = [POINTER(trax_image), c_int]
    trax_image_write_memory_row.restype = POINTER(ctypes.c_char)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 391
if _libs["trax"].has("trax_image_get_memory_row", "cdecl"):
    trax_image_get_memory_row = _libs["trax"].get("trax_image_get_memory_row", "cdecl")
    trax_image_get_memory_row.argtypes = [POINTER(trax_image), c_int]
    trax_image_get_memory_row.restype = POINTER(ctypes.c_char)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 397
if _libs["trax"].has("trax_image_get_buffer", "cdecl"):
    trax_image_get_buffer = _libs["trax"].get("trax_image_get_buffer", "cdecl")
    trax_image_get_buffer.argtypes = [POINTER(trax_image), POINTER(c_int), POINTER(c_int)]
    trax_image_get_buffer.restype = POINTER(ctypes.c_char)

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 402
if _libs["trax"].has("trax_region_release", "cdecl"):
    trax_region_release = _libs["trax"].get("trax_region_release", "cdecl")
    trax_region_release.argtypes = [POINTER(ctypes.c_void_p)]
    trax_region_release.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 407
if _libs["trax"].has("trax_region_get_type", "cdecl"):
    trax_region_get_type = _libs["trax"].get("trax_region_get_type", "cdecl")
    trax_region_get_type.argtypes = [ctypes.c_void_p]
    trax_region_get_type.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 412
if _libs["trax"].has("trax_region_create_special", "cdecl"):
    trax_region_create_special = _libs["trax"].get("trax_region_create_special", "cdecl")
    trax_region_create_special.argtypes = [c_int]
    trax_region_create_special.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 417
if _libs["trax"].has("trax_region_set_special", "cdecl"):
    trax_region_set_special = _libs["trax"].get("trax_region_set_special", "cdecl")
    trax_region_set_special.argtypes = [ctypes.c_void_p, c_int]
    trax_region_set_special.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 422
if _libs["trax"].has("trax_region_get_special", "cdecl"):
    trax_region_get_special = _libs["trax"].get("trax_region_get_special", "cdecl")
    trax_region_get_special.argtypes = [ctypes.c_void_p]
    trax_region_get_special.restype = c_int

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 427
if _libs["trax"].has("trax_region_create_rectangle", "cdecl"):
    trax_region_create_rectangle = _libs["trax"].get("trax_region_create_rectangle", "cdecl")
    trax_region_create_rectangle.argtypes = [c_float, c_float, c_float, c_float]
    trax_region_create_rectangle.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 432
if _libs["trax"].has("trax_region_set_rectangle", "cdecl"):
    trax_region_set_rectangle = _libs["trax"].get("trax_region_set_rectangle", "cdecl")
    trax_region_set_rectangle.argtypes = [ctypes.c_void_p, c_float, c_float, c_float, c_float]
    trax_region_set_rectangle.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 437
if _libs["trax"].has("trax_region_get_rectangle", "cdecl"):
    trax_region_get_rectangle = _libs["trax"].get("trax_region_get_rectangle", "cdecl")
    trax_region_get_rectangle.argtypes = [ctypes.c_void_p, POINTER(c_float), POINTER(c_float), POINTER(c_float), POINTER(c_float)]
    trax_region_get_rectangle.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 443
if _libs["trax"].has("trax_region_create_polygon", "cdecl"):
    trax_region_create_polygon = _libs["trax"].get("trax_region_create_polygon", "cdecl")
    trax_region_create_polygon.argtypes = [c_int]
    trax_region_create_polygon.restype = ctypes.c_void_p

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 448
if _libs["trax"].has("trax_region_set_polygon_point", "cdecl"):
    trax_region_set_polygon_point = _libs["trax"].get("trax_region_set_polygon_point", "cdecl")
    trax_region_set_polygon_point.argtypes = [ctypes.c_void_p, c_int, c_float, c_float]
    trax_region_set_polygon_point.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 453
if _libs["trax"].has("trax_region_get_polygon_point", "cdecl"):
    trax_region_get_polygon_point = _libs["trax"].get("trax_region_get_polygon_point", "cdecl")
    trax_region_get_polygon_point.argtypes = [ctypes.c_void_p, c_int, POINTER(c_float), POINTER(c_float)]
    trax_region_get_polygon_point.restype = None

# /home/lukacu/Checkouts/vot/trax/include/trax.h: 458
if _libs["trax"].has("trax_region_get_polygon_count", "cdecl"):
    trax_region_get_polygon_count = _libs["trax"].get("trax_region_get_polygon_count", "cdecl")
    trax_region_get_polygon_count.argtypes = [ctypes.c_void_p]
    trax_region_get_polygon_count.restype = c_int
